--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,3 +3,10 @@ body{
     background-color: black;
     text-align: center;
 }
+h1{
+    font-size: 50px;
+    font: bold;
+}
+p{
+    text-align: justify;
+}
